--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipyopenlayers"
+    "from ipyopenlayers import Map, TileLayer"
    ]
   },
   {
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = ipyopenlayers.ExampleWidget()\n",
-    "w"
+    "m = Map()\n",
+    "m"
    ]
   },
   {
@@ -32,13 +32,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert w.value == 'Hello World'"
+    "m.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = TileLayer()\n",
+    "layer.url = 'wdqjwndqwnd.png'\n",
+    "layer.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_layer(layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.layers = []"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -52,9 +90,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
