--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -24,12 +24,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5655545902f4466c9bc23ce1ad2d2059",
+       "model_id": "e859d057cbf6408b963ab3f9d054919a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map()"
+       "Map(center=[0.0, 0.0])"
       ]
      },
      "execution_count": 2,
@@ -48,42 +48,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = TileLayer()"
+    "m.zoom=2\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "layer.url"
+    "m.center=[3.0,5.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "layere= TileLayer()\n",
     "layere.url=\"https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png\"\n"
@@ -91,66 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "m.add_layer(layer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "layer.url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "layer.url='https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "layer.url"
+    "m.add_layer(layere)"
    ]
   },
   {
@@ -165,38 +94,6 @@
       ]
      },
      "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "m.add_layer(layere)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[TileLayer(),\n",
-       " TileLayer(url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png')]"
-      ]
-     },
-     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,23 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "layere.url='https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
@@ -278,6 +158,72 @@
    ],
    "source": [
     "m.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98a20f2762f3428585069cda1d7b0b8b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[0.0, 0.0], zoom=2.0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = Map(center=[0.0, 0.0], zoom=2)\n",
+    "m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.zoom\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[34.6252978589571, -77.34580993652344]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.center"
    ]
   },
   {
