Changes in the nootebook

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, TileLayer, ImageOverLayer"
+    "from ipyopenlayers import Map, TileLayer, ImageOverlayer"
    ]
   },
   {
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "image=ImageOverLayer()\n",
+    "image=ImageOverlay()\n",
     "image"
    ]
   },
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_Overlayer(image)"
+    "m.add_overlay(image)"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imaget=ImageOverLayer()\n",
+    "imaget=ImageOverlay()\n",
     "imaget.image_url=\"https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg\"\n"
    ]
   },
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_Overlayer(imaget)"
+    "m.add_overlay(imaget)"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_Overlayer(image)"
+    "m.remove_overlay(image)"
    ]
   }
  ],
