--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, TileLayer, ImageOverlayer"
+    "from ipyopenlayers import Map, TileLayer, ImageOverlay"
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "m.over_layers"
+    "m.overlays"
    ]
   },
   {
