--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -9,22 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import Map, TileLayer, ImageOverLayer"
+    "from ipyopenlayers import Map, TileLayer, ImageOverlay, VideoOverlay,PopupOverlay"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5ca1d6e4568477b9b74c923a0be1262",
+       "model_id": "9eca96d547f3475589485750d72ce076",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,7 +32,7 @@
        "Map(center=[0.0, 0.0])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,33 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bf7058855764a519a4ff61ea74324a7",
+       "model_id": "4295b725b3ac45e4a5311db80d397a3d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ImageOverLayer(image_bounds=[0, 0])"
+       "ImageOverlay(position=[0, 0])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image=ImageOverLayer()\n",
+    "image=ImageOverlay()\n",
     "image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,69 +88,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_Overlayer(image)"
+    "m.add_overlay(image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image.image_bounds=[-70,70]"
+    "image.position=[-70,70]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ImageOverLayer(image_bounds=[-70, 70])]"
+       "[ImageOverlay(image_url='https://i.imgur.com/06Q1fSz.png', position=[-70, 70])]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m.over_layers"
+    "m.overlays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imaget=ImageOverLayer()\n",
+    "imaget=ImageOverlay()\n",
     "imaget.image_url=\"https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_Overlayer(imaget)"
+    "m.add_overlay(imaget)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_Overlayer(image)"
+    "m.remove_overlay(image)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2c752a6a9f4740dc87b858c6907f58d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VideoOverlay(position=[0, 0])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video=VideoOverlay()\n",
+    "video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video.video_url=\"https://www.w3schools.com/html/mov_bbb.webm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_overlay(video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video.position=[-70,70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video2=VideoOverlay()\n",
+    "video2.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video2.position=[-80,70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_overlay(video2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.remove_overlay(video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "786f2fed9b174fa5bbc4829bffabe492",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PopupOverlay(position=[0, 0])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popup=PopupOverlay()\n",
+    "popup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popup.popup_content='hellooooo'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_overlay(popup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.remove_overlay(popup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
