--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26ca977cf97241c0b29d81cb48500b97",
+       "model_id": "6db90e12cf764585b9fd87cc848167ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,33 +39,16 @@
    ],
    "source": [
     "m = Map(center=[0.0, 0.0], zoom=2)\n",
-    "m"
+    "m "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eca839e371ec41e5806221cd8bda94dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "TileLayer()"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "layer=TileLayer()\n",
-    "layer"
+    "layer=TileLayer()"
    ]
   },
   {
@@ -74,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer.url='https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'"
+    "m.add_layer(layer)"
    ]
   },
   {
@@ -85,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'"
       ]
      },
      "execution_count": 5,
@@ -94,7 +77,7 @@
     }
    ],
    "source": [
-    "m.layers"
+    "layer.url"
    ]
   },
   {
@@ -103,27 +86,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_layer(layer)"
+    "layere=TileLayer()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[TileLayer(url='https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png')]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "m.layers"
+    "layere.url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'"
    ]
   },
   {
@@ -133,8 +105,67 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "'https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layere.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_layer(layere)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[TileLayer(),\n",
+       " TileLayer(url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.remove_layer(layere)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c598e65b1054e3d87e80d164ef8c5d0",
+       "model_id": "e656193ddf564562a5b90a27eb114169",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,7 +173,7 @@
        "ImageOverlay(position=[0, 0])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,16 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.image_url=\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.image_url=\"https://i.imgur.com/ZF6s192.png\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ImageOverlay(image_url='https://i.imgur.com/06Q1fSz.png', position=[-70, 70])]"
+       "[ImageOverlay(image_url='https://i.imgur.com/ZF6s192.png', position=[-70, 70])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,64 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_overlay(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7453e31240d4770986c2189b947d065",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VideoOverlay(position=[0, 0])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "video=VideoOverlay()\n",
-    "video"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video.video_url=\"https://www.w3schools.com/html/mov_bbb.webm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.add_overlay(video)"
+    "m.remove_overlay(imaget)"
    ]
   },
   {
@@ -295,12 +273,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video.position=[-70,70]"
+    "video=VideoOverlay()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video.video_url=\"https://www.w3schools.com/html/mov_bbb.webm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_overlay(video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video.position=[-70,80]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,16 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video2.position=[-80,70]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,13 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.remove_overlay(video2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "786f2fed9b174fa5bbc4829bffabe492",
+       "model_id": "516f2afa2a674a159e61815aa12ec034",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,7 +365,7 @@
        "PopupOverlay(position=[0, 0])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,19 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "m.remove_overlay(popup)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
