changed render function

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39f0e92a735d45c08d2abe1d75e2ee14",
+       "model_id": "be83a201afd04d6092afa4c08da8c79e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,26 +64,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a02bcf4b2af40628fc1e461bf2e1b34",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ZoomSlider()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zoom=ZoomSlider()\n",
-    "zoom"
+    "zoom=ZoomSlider()"
    ]
   },
   {
@@ -99,26 +82,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5362137f52648b3a712dd96f8bdb777",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FullScreen()"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "full=FullScreen()\n",
-    "full"
+    "full=FullScreen()"
    ]
   },
   {
@@ -160,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +135,7 @@
        "'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +173,7 @@
        "'https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,13 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e41abe9d11e438da7148502067fd253",
+       "model_id": "96f6ebdbfbdf40758ddc3d6a7e1cfb0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +237,7 @@
        "ImageOverlay(position=[0, 0])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +294,7 @@
        "[ImageOverlay(image_url='https://i.imgur.com/ZF6s192.png', position=[-70, 70])]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,13 +415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "516f2afa2a674a159e61815aa12ec034",
+       "model_id": "90f1687285754dd8aefc8364d2d741d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -463,7 +429,7 @@
        "PopupOverlay(position=[0, 0])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
